# asr

./: .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_V3.md  CHANGELOG.md  CONTRIBUTING.md  DOCS_INDEX.md  FILE_HANDLING_GUIDE.md  FILE_HANDLING_GUIDE_V3.md  LICENSE  PREFAB_GUIDE.md  QUICK_REFERENCE.md  README.md  STREAMING_GUIDE.md  V3_MIGRATION_SUMMARY.md  prd v2.1.md  prd v2.2.md  prd v3.0.md  prd v3.1.md  prd.md  prefab-manifest.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-release.yml
scripts/: quick_start.py  validate_manifest.py  version_bump.py
src/: __init__.py  main.py
tests/: test_main.py
